2003-01-08  Jesper Harder  <harder@ifa.au.dk>

	* mm-decode.el (mm-inline-media-tests): .xpm is 'x-xpixmap'.

2003-01-07  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnrss.el (nnrss-group-alist): Add and clear up.

2003-01-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el: removed unnecessary condition-case for loading bbdb-com.el

	* lpath.el (bbdb-search): added BBDB functions for a better way to
	fix missing functions

	* spam.el (spam-check-ifile): if should be an unless

	* spam.el: define 'ignore alias for spam-BBDB-register-routine,
	spam-enter-ham-BBDB, and bbdb-create-internal initially to hush up warnings
	(spam-ifile-all-categories): doc string fixed to be less than 80 chars

2003-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-make-menu-bar): Added
	gnus-summary-refer-thread to thread menu.

2002-01-07  Kevin Greiner  <kgreiner@xpediantsolutions.com>

	* gnus-agent.el (gnus-agent-fetch-group-1): When fetching within a
	summary buffer, articles that cannot be fetched are marked as
	canceled.

	* nntp.el (nntp-with-open-group): The quit signal handler must
	propagate the quit signal to the next outer handler so that the
	caller knows that the request aborted abnormally.
	
2003-01-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-check-ifile, spam-ifile-register-with-ifile) 
	(spam-ifile-register-spam-routine) 
	(spam-ifile-register-ham-routine): added ifile functionality that
	does not use ifile-gnus.el to classify and register articles
	(spam-get-article-as-string): convenience function
	(spam-summary-prepare-exit): added ifile spam and ham registration
	(spam-ifile-all-categories, spam-ifile-spam-category) 
	(spam-ifile-path, spam-ifile): added customization options

	* gnus.el (gnus-group-ham-exit-processor-ifile): added ifile ham
	exit processor
	(spam-process): added gnus-group-ham-exit-processor-ifile to the
	list of choices

2003-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>
