@@ -847,8 +847,9 @@ This can be added to `gnus-select-article-hook' or
       (when (gnus-agent-fetch-articles
              gnus-newsgroup-name
 	     (list gnus-current-article))
-	(setq gnus-newsgroup-undownloaded (delq gnus-current-article gnus-newsgroup-undownloaded))
-	(gnus-summary-update-article gnus-current-article)))))
+	(setq gnus-newsgroup-undownloaded
+	      (delq gnus-current-article gnus-newsgroup-undownloaded))
+	(gnus-summary-update-line gnus-current-article)))))
 
 ;;;
 ;;; Internal functions
